@@ -1,3 +1,7 @@
+2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intprops.h, verify.h: Updated from GNULIB.
+
 2018-08-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* regex_internal.c: Sync with GNULIB.
