@@ -1,3 +1,7 @@
+2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intprops.h, mktime.c: Updated from GNULIB.
+
 2018-08-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* mktime.c.old: Removed.
